--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,6 +6,23 @@ sites:
   - name: IBM Community
     url: https://www.ibm.com/community/
     icon: https://www.ibm.com/favicon.ico
+  - name: TechXchange Conference
+    url: https://www.ibm.com/community/ibm-techxchange-conference/
+    icon: https://www.ibm.com/favicon.ico
+  - name: HL Community home page
+    url: https://community.ibm.com/community/user/home
+    icon: https://www.ibm.com/favicon.ico
+  - name: HL TechXchange group
+    url: https://community.ibm.com/community/user/communities/community-home?CommunityKey=8c64553a-86a9-4af3-a2e6-55826c69b4e2
+    icon: https://www.ibm.com/favicon.ico
+  - name: Support 101
+    url: https://www.ibm.com/community/101/
+    icon: https://www.ibm.com/favicon.ico
+  - name: QRadar 101
+    url: https://www.ibm.com/community/101/qradar/
+    icon: https://www.ibm.com/favicon.ico
+
+
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
